# api/controllers/appointmentController.js
@@ -1,8 +1,64 @@
-const userService = require('../services/userService');
 const helper = require('../helpers/common')
 const appointmentService = require('../services/appointmentService')
 const { canViewAppointment, canAddAppointment, canDeleteAppointment, scopedAppointments } = require('../rbac/permissions')
-const ObjectID = require('mongoose').Types.ObjectId; 
+const ObjectID = require('mongoose').Types.ObjectId
+const serviceService = require('../services/serviceService')
+const employeeService = require('../services/employeeService.js')
+
+const addNewAppointment = async (req, res) => {
+    try{
+        // retrieve the data from the http client
+        let reqData = req.body
+        const client = res.user
+        reqData.startDateTime = new Date(reqData.startDateTime)
+        let mapServiceEmployees = []
+        let nextServiceStartDateTime = reqData.startDateTime
+        let lastServiceDuration = 0
+        let price = 0
+
+        // verify if the data from the http client are legit
+        for(let i = 0; i < reqData.mapServiceEmployees.length; i++) {
+            // does the service exist in the db?
+            let service = await serviceService.getOneService(reqData.mapServiceEmployees[i].serviceId)
+            if(!service)
+                throw new Error(`Aucune service n'a ${ reqData.mapServiceEmployees[i].serviceId } comme ID`)
+            price += service.price
+
+            // does the employee exist in the db ?
+            let employee = await employeeService.getOneEmployee(reqData.mapServiceEmployees[i].employeeId)
+            if(!employee)
+                throw new Error(`Aucun employé n'a ${ reqData.mapServiceEmployees[i].employeeId } comme ID`)
+            // TODO: verify if the employee doesn't have something else to do
+            
+            // push it, push it! 
+            mapServiceEmployees.push({employee, service, startDateTime: nextServiceStartDateTime})
+
+            // the next service start date time = this service start date time + this service's duration
+            nextServiceStartDateTime = new Date(nextServiceStartDateTime.getTime() + service.duration*60000)
+            lastServiceDuration = service.duration
+        }
+        // ora, calcolare la data di fine dell'appuntamento
+        let appointmentEndDateTime = new Date(nextServiceStartDateTime.getTime() + lastServiceDuration)
+        reqData.endDateTime = appointmentEndDateTime
+        
+        reqData.status = 'booked'
+        reqData.mapServiceEmployees = mapServiceEmployees
+        reqData.price = price
+
+        // the authenticated user is the client
+        reqData.client = req.user
+        console.log(reqData.client)
+
+        const { _id } = await appointmentService.addAppointment(reqData)
+
+        return helper.sendResponseMsg(res, `Rendez-vous créer avec succès. Ref:${ _id }`, true, 200 )
+    }
+    catch(e){
+        helper.prettyLog(`catching ${e}`)
+        helper.log2File(e.message,'error')
+        return helper.sendResponse(res, 500, {message:e.message, success:false})
+    }
+} 
 
 const getOneAppointment = (req, res) => {
 
@@ -22,25 +78,7 @@ const getAppointments = async (req, res) => {
         return helper.sendResponse(res, 500, {message:e.message, success:false})
     }
 }
-
-const addNewAppointment = async (req, res) => {
-    try{
-        const data = { name } = req.body
-
-        const createdBy = new ObjectID(req.user.id)
-
-        Object.assign(data, {createdBy})
-
-        await appointmentService.addAppointment(data)
-
-        return helper.sendResponseMsg(res, 'Appointment successfully created', true, 200 )
-    }
-    catch(e){
-        helper.prettyLog(`catching ${e}`)
-        helper.log2File(e.message,'error')
-        return helper.sendResponse(res, 500, {message:e.message, success:false})
-    }
-}   
+  
 const removeAppointment = async (req, res) => {
     try{
         const deleted = await appointmentService.deleteAppointment(req.params.appointmentId)
@@ -75,7 +113,7 @@ function authGetAppointment(req, res, next) {
 
 function authAddAppointment(req, res, next){
     if(!canAddAppointment(req.user))
-        return helper.sendResponseMsg(res, 'Not Allowed', false, 401)
+        return helper.sendResponseMsg(res, "Cet utilisateur n'a pas le droit de créer un rendez-vous.", false, 403)
 
     next()
 }
