# api/models/appointment.js
@@ -3,10 +3,25 @@ const { EmployeeSchema } = require('./employee')
 const { ServiceSchema } = require('./service')
 const { UserSchema } = require('./user')
 
-const Schema = new mongoose.Schema({
-    employee: [{
+const MapServiceEmployeeSchema = new mongoose.Schema({
+    employee: {
         type: EmployeeSchema,
         required: 'Un rendez-vous doit avoir aux moins un employee'
+    },
+    service: {
+        type: ServiceSchema,
+        required: 'Un rendez-vous doit avoir une service'
+    },
+    startDateTime: {
+        type: Date,
+        required: 'Un map de service employé dans un rendez-vous doit avoir un date et heure de début'
+    }
+})
+
+const Schema = new mongoose.Schema({
+    mapServiceEmployees: [{
+        type: MapServiceEmployeeSchema,
+        required: 'Un rendez-vous doit avoir au moins une service et un employé'
     }],
     startDateTime: {
         type: Date,
@@ -24,6 +39,10 @@ const Schema = new mongoose.Schema({
         type: String,
         enum: ['booked', 'done'],
         default: 'booked'
+    },
+    price: {
+        type: Number,
+        required: 'Le prix des services du rendez-vous est nécessaire.'
     }
 
 }, {timestamps: true})
